# ProyectosPr-cticas

./: .gitignore  Dockerfile  Makefile  alembic.ini  api.py  comandos_postman  database.py  docker_compose.yml  juego.py  main.py  pyproject.toml  requirements.txt  tablero.py
alembic/: env.py
alembic/versions/: 2484c0f7e695_initial_migration.py  8ebfedb29dbd_inicial_migracion.py
models/: jugada.py  jugador.py  partida.py
src/: api_main.py
src/application/: juego.py  use_cases.py
src/handler/: main.py
src/juego/api/: jugador_router.py
src/juego/domain/: jugador.py
src/juego/handler/: handler_jugador.py
src/juego/repository/: jugador_repository.py  sql_alchemy_jugador_repository.py
src/jugador/application/: use_cases_jugador.py
src/jugador/domain/: juego.py
src/jugador/handler/: handler_jugador.py
src/jugador/repository/: jugador_repository.py  sql_alchemy_jugador_repository.py
src/repository/: Jugada_partida_repository.py  SQLAlchemy_repositories.py  jugador_repository.py  sql_alchemy_jugada_partida_repository.py  sql_alchemy_jugador_repository.py
src/shared/: gui_main.py  sql_alchemy_interface.py  use_cases.py
test/: confest.py  test_api.py  test_juego.py  test_tablero.py  tets_api.py
test/common/: FakeRepositoryJugadaPartida.py  FakeRepositoryJugador.py  FakeUnitofWork.py  fixtures.py  object_mother.py
test/jugador/: test_handler_jugador.py  test_juego.py  test_uses_cases_jugador.py
test/partida/: test_handel_jugada_partida.py  test_uses_cases_jugada_partida.py
test/shared/: test_api.py  test_sqlalchemy_repository.py
(+25 files in other folders)
