[project]
name = "python3enrayapoo"
version = "0.1.0"
description = "Tres en raya"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "sqlalchemy>=2.0.44",
    "requests==2.32.5",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi[standard]==0.119.1",
    "fun==1.0.0",
    "h11==0.16.0",
    "idna==3.11",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.38.0",
    "pytest ==8.3.0",
    "httpx ==0.27.0",
]


